--- a/android/tflite/app/src/main/res/values/base-strings.xml
+++ b/android/tflite/app/src/main/res/values/base-strings.xml
@@ -16,15 +16,6 @@
 -->
 
 <resources>
-    <string name="app_name">TfLiteCameraDemo</string>
-    <string name="intro_message">
-        <![CDATA[
-        
-            
-            This sample demonstrates the basic use of TfLite API. Check the source code to see how
-            you can use TfLite for efficient, on-device inference with trained TensorFlow models.
-            
-        
-        ]]>
-    </string>
+    <string name="app_name">Rock Paper Scissors</string>
+
 </resources>
